// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`modules/datasource/terraform-module/index getReleases processes real data 1`] = `
Object {
  "homepage": "https://registry.terraform.io/modules/hashicorp/consul/aws",
  "registryUrl": "https://registry.terraform.io",
  "releases": Array [
    Object {
      "version": "0.0.1",
    },
    Object {
      "version": "0.0.2",
    },
    Object {
      "version": "0.0.3",
    },
    Object {
      "version": "0.0.4",
    },
    Object {
      "version": "0.0.5",
    },
    Object {
      "version": "0.1.0",
    },
    Object {
      "version": "0.1.1",
    },
    Object {
      "version": "0.1.2",
    },
    Object {
      "version": "0.2.0",
    },
    Object {
      "version": "0.2.1",
    },
    Object {
      "version": "0.2.2",
    },
    Object {
      "version": "0.3.0",
    },
    Object {
      "version": "0.3.1",
    },
    Object {
      "version": "0.3.2",
    },
    Object {
      "version": "0.3.3",
    },
    Object {
      "version": "0.3.4",
    },
    Object {
      "version": "0.3.5",
    },
    Object {
      "version": "0.3.6",
    },
    Object {
      "version": "0.3.7",
    },
    Object {
      "version": "0.3.8",
    },
    Object {
      "version": "0.3.9",
    },
    Object {
      "version": "0.3.10",
    },
    Object {
      "releaseTimestamp": "2018-09-20T11:25:22.957Z",
      "version": "0.4.0",
    },
  ],
  "sourceUrl": "https://github.com/hashicorp/terraform-aws-consul",
}
`;

exports[`modules/datasource/terraform-module/index getReleases processes real data on changed subpath 1`] = `
Object {
  "registryUrl": "https://terraform.foo.bar",
  "releases": Array [
    Object {
      "version": "0.0.1",
    },
    Object {
      "version": "0.0.2",
    },
    Object {
      "version": "0.0.3",
    },
    Object {
      "version": "0.0.4",
    },
    Object {
      "version": "0.0.5",
    },
    Object {
      "version": "0.1.0",
    },
    Object {
      "version": "0.1.1",
    },
    Object {
      "version": "0.1.2",
    },
    Object {
      "version": "0.2.0",
    },
    Object {
      "version": "0.2.1",
    },
    Object {
      "version": "0.2.2",
    },
    Object {
      "version": "0.3.0",
    },
    Object {
      "version": "0.3.1",
    },
    Object {
      "version": "0.3.2",
    },
    Object {
      "version": "0.3.3",
    },
    Object {
      "version": "0.3.4",
    },
    Object {
      "version": "0.3.5",
    },
    Object {
      "version": "0.3.6",
    },
    Object {
      "version": "0.3.7",
    },
    Object {
      "version": "0.3.8",
    },
    Object {
      "version": "0.3.9",
    },
    Object {
      "version": "0.3.10",
    },
    Object {
      "releaseTimestamp": "2018-09-20T11:25:22.957Z",
      "version": "0.4.0",
    },
  ],
  "sourceUrl": "https://github.com/hashicorp/terraform-aws-consul",
}
`;

exports[`modules/datasource/terraform-module/index getReleases processes with registry in name 1`] = `
Object {
  "homepage": "https://registry.terraform.io/modules/hashicorp/consul/aws",
  "registryUrl": "https://registry.terraform.io",
  "releases": Array [
    Object {
      "version": "0.0.1",
    },
    Object {
      "version": "0.0.2",
    },
    Object {
      "version": "0.0.3",
    },
    Object {
      "version": "0.0.4",
    },
    Object {
      "version": "0.0.5",
    },
    Object {
      "version": "0.1.0",
    },
    Object {
      "version": "0.1.1",
    },
    Object {
      "version": "0.1.2",
    },
    Object {
      "version": "0.2.0",
    },
    Object {
      "version": "0.2.1",
    },
    Object {
      "version": "0.2.2",
    },
    Object {
      "version": "0.3.0",
    },
    Object {
      "version": "0.3.1",
    },
    Object {
      "version": "0.3.2",
    },
    Object {
      "version": "0.3.3",
    },
    Object {
      "version": "0.3.4",
    },
    Object {
      "version": "0.3.5",
    },
    Object {
      "version": "0.3.6",
    },
    Object {
      "version": "0.3.7",
    },
    Object {
      "version": "0.3.8",
    },
    Object {
      "version": "0.3.9",
    },
    Object {
      "version": "0.3.10",
    },
    Object {
      "releaseTimestamp": "2018-09-20T11:25:22.957Z",
      "version": "0.4.0",
    },
  ],
  "sourceUrl": "https://github.com/hashicorp/terraform-aws-consul",
}
`;
